--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="menu">
                 <ul>
                     <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="pagina2.html">ROPA Y ACCESORIOS</a></li>
-                    <li><a href="pagina2.html">CUENTA</a></li>
+                    <li><a href="https://www.empronutrition.com/es/114-ropa-y-accesorios">ROPA Y ACCESORIOS</a></li>
+                    <li><a href="pagina2.html">ENTRENIMIENTO</a></li>
                     <li><a href="contacto.html">CONTACTANOS</a></li>
                 </ul>
             </div>
