--- a/pagina2.html
+++ b/pagina2.html
@@ -42,7 +42,7 @@
 </head>
 <body class="caja_padre2">
     <div class="pagina2">
-        <p>Pagina en construcción, por el momento</p>
+        <p>Juega para fortalecer tu mente</p>
     </div>
     <h1>Adivina el número</h1>
 
