--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
             </div>
         </div>
     </div>
-    
+    <div id=ventanaEmergente" class="ventana-emergente">
+        <span class="cerrar" onclick="cerrarVentanaEmergente()">&times;</span>
+        <img id="imagenVentanaEmergente" src="" alt="">
+        <div id="detallesProducto"></div>v
     </div>
     <script src="script.js"></script>
     <footer>
