--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id=ventanaEmergente" class="ventana-emergente">
         <span class="cerrar" onclick="cerrarVentanaEmergente()">&times;</span>
         <img id="imagenVentanaEmergente" src="" alt="">
-        <div id="detallesProducto"></div>v
+        <div id="detallesProducto"></div>
     </div>
     <script src="script.js"></script>
     <footer>
